src/test/deca/context/invalid/provided/testi15.deca
//Resultats :
//Erreur contextuelle
//Ligne 15:Right value doesn't match the expected type

class A{
}
class B extends A{
}
class C{
}
{
    A a = new A();
    B b = new B();
    C c = new C();
    a = b;
    b = a;
}